# Lights-Control-ROS2

./: CMakeLists.txt  package.xml
Light_Control/: CMakeLists.txt  package.xml
Light_Control/launch/: mavros.launch
Light_Control/scripts/: auto_light_adjust.py  publish_advanced_light_recommendation.py  publish_light_recommendation.py
Light_Control/srv/: SetLight.srv
Light_Control_Video/: Control_brightness.py
camera_brightness_publisher/: CMakeLists.txt  package.xml
camera_brightness_publisher/scripts/: camera_brightness_node.py
launch/: apm_pluginlist.yaml  light_control.launch.py  mavros.launch.py
scripts/: fade_lights.py  light_service_node.py
srv/: SetFloat.srv
