<?xml version="1.0"?>
<package format="3">
  <name>bluerov2_control</name>
  <version>0.0.1</version>
  <description>Light control for BlueROV2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Build dependencies for generating .srv/.msg files -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- Other dependencies for runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>
  <depend>std_srvs</depend>
  <depend>pymavlink</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Make sure to add this line: -->
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
