<?xml version="1.0"?>
<package format="3">
  <name>bluerov2_control</name>
  <version>0.0.1</version>
  <description>Light control for BlueROV2 with a custom service</description>
  <maintainer email="someone@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies for generating .srv files -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Other runtime deps for your code -->
  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>
  <depend>std_srvs</depend>
  <depend>pymavlink</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- CRITICAL: Mark the package as an interface package -->
    <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
  </export>

</package>
