<?xml version="1.0"?>
<package format="3">
  <name>camera_brightness_publisher</name>
  <version>0.0.1</version>
  <description>Publishes the desired light intensity based on camera brightness.</description>
  <maintainer email="someone@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv-python</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
